@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,7 +38,7 @@ public class AssertsTest {
         }
 
         public int compareTo(Foo f) {
-            return new Integer(id).compareTo(new Integer(f.id));
+            return Integer.valueOf(id).compareTo(Integer.valueOf(f.id));
         }
         public String toString() {
             return "Foo(" + Integer.toString(id) + ")";
